--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.terraform.lock.hcl
 # Crash log files
 crash.log
+.DS_Store
 # Exclude all .tfvars files, which are likely to contain sentitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
